<resources>
    <string name="app_name">TapEvent</string>

    <!-- Login -->
    <string name="login_title" translatable="false">Login</string>
    <string name="login_subtitle">Please sign in to continue</string>
    <string name="login_username_hint" translatable="false">Username</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="login_remember_me_label">Remember me</string>
    <string name="login_btn_label" translatable="false">LOGIN</string>
    <string name="login_missing_fields_msg">Please fill in all the fields</string>
    <string name="login_failed_msg">Login failed, make sure the username and password are correct</string>
    <string name="session_expired_msg">The current session is expired, please login</string>

    <!-- Home -->
    <string name="home_welcome_message">Welcome, %1$s</string>
    <string name="home_profile_picture_descriptor">profile picture</string>
    <string name="home_profile_logout">Logout?</string>
    <string name="home_profile_logout_yes">Yes</string>
    <string name="home_profile_logout_no">No</string>
    <string name="home_profile_logout_error">Couldn\'t log out</string>

    <!-- Item -->
    <string name="item_price_placeholder" translatable="false">12 €</string>
    <string name="no_items_available">No %1$s</string>
    <string name="item_selector_title_placeholder">Location Name</string>
    <string name="item_selector_btn_selection_finalize_descriptor">finalize selection</string>
    <string name="item_selector_transaction_success">Transaction Successful</string>
    <string name="item_selector_transaction_fail">Transaction Failed, insufficient tickets</string>
    <string name="item_selector_btn_clear_descriptor">clear items</string>
    <string name="item_selector_btn_add_customer_descriptor">add customer</string>
    <string name="item_selector_select_one_item">Select at least one item</string>
    <string name="item_thumbnail_descriptor" translatable="false">thumbnail</string>
    <string name="item_name_placeholder">Item Name</string>
    <string name="item_selected_btn_add_descriptor">add item</string>
    <string name="item_selected_btn_remove_descriptor">remove item</string>
    <string name="item_selected_name_count" translatable="false">%1$s x %2$d</string>
    <string name="item_diplayer_sold_id">Sold in: %1$s</string>
    <string name="item_list_title">Items</string>
    <string name="item_list_back_btn_descriptor">go back</string>

    <!-- Nfc -->
    <string name="nfc_read_title">Ready to read</string>
    <string name="nfc_write_title">Ready to write</string>
    <string name="nfc_subtitle">Tap an NFC Tag</string>
    <string name="nfc_animation_descriptor">nfc animation</string>

    <string name="nfc_success_title">Success</string>
    <string name="nfc_subtitle_read_successful">Tag was read</string>
    <string name="nfc_subtitle_write_successful">Tag was written</string>

    <string name="nfc_error_title">Something went wrong</string>
    <string name="nfc_subtitle_no_tag_found_error">Couldn\'t read tag</string>
    <string name="nfc_subtitle_empty_tag_error">Tag was empty</string>
    <string name="nfc_subtitle_id_not_found">No customer id was found</string>
    <string name="nfc_subtitle_tag_not_formattable">Tag is not formattable</string>
    <string name="nfc_subtitle_connection_error">The connection was interrupted, please hold the tag longer</string>

    <string name="nfc_read_in_process_title">Reading…</string>
    <string name="nfc_write_in_process_title">Writing…</string>
    <string name="nfc_in_process_subtitle">Hold the tag</string>

    <string name="nfc_adapter_unavailable">Nfc is not available on this device</string>

    <!-- Event -->
    <string name="event_nav_event_title">Event</string>
    <string name="event_cashpoints_title">Cashpoints</string>
    <string name="event_stands_title">Stands</string>
    <string name="event_tickets_title">Tickets</string>
    <string name="event_products_title">Products</string>
    <string name="event_name_placeholder">Event Name</string>
    <string name="event_date_placeholder" translatable="false">dd/mm/yyyy</string>
    <string name="event_check_balance_btn_label">CHECK BALANCE</string>
    <string name="event_role_placeholder" translatable="false">Guest</string>

    <!-- Errors -->
    <string name="critical_error">A critical error occurred</string>
</resources>