<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_nfc_prompt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nfc_read_title"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/tv_nfc_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc_subtitle"
        android:textAlignment="center"
        android:layout_marginTop="15dp" />

    <ImageView
        android:id="@+id/iv_nfc_animated_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/avd_splash_anim"
        android:contentDescription="@string/nfc_animation_descriptor" />

</LinearLayout>