<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_add_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/add_item"
            android:background="@drawable/btn_add_bg"
            android:contentDescription="@string/item_selected_btn_add_descriptor"
            style="@style/NumpadButton.Alternative" />

        <ImageView
            android:id="@+id/iv_selected_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/item_selectable_thumbnail_descriptor"
            android:adjustViewBounds="true"
            android:layout_below="@+id/btn_add_item" />

        <TextView
            android:id="@+id/tv_selected_title_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_selected_name_count"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_below="@id/iv_selected_thumbnail" />

        <TextView
            android:id="@+id/tv_selected_total_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price_placeholder"
            android:padding="8dp"
            android:layout_below="@id/tv_selected_title_count" />

        <ImageButton
            android:id="@+id/btn_remove_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/remove_item"
            android:background="@drawable/btn_remove_bg"
            android:contentDescription="@string/item_selected_btn_remove_descriptor"
            style="@style/NumpadButton.Alternative"
            android:layout_below="@id/tv_selected_total_cost"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>