<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_displayer_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/item_thumbnail_descriptor"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_displayer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/item_name_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/iv_displayer_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_displayer_sold_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingBottom="10dp"
            android:text="@string/item_diplayer_sold_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_displayer_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_displayer_thumbnail"
            android:ellipsize="none"
            android:scrollHorizontally="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>