<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_placeholder"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/firebrick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/tv_event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_event_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/btn_check_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_check_balance_btn_label"
        android:background="@drawable/btn_bg"
        style="@style/Theme.TapEvent.Button"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_tickets"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_event_date"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/colorSurface">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_tickets_title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rw_event_tickets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbars="vertical"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_products"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/card_view_tickets"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="?attr/colorSurface">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_products_title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rw_event_products"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbars="vertical"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>