<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lout_no_locations"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_items_available"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lout_regular"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_selector_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/item_selector_title_placeholder"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/sp_selector_title"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_items_selectable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:layout_below="@id/tv_selector_title"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_items_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_above="@id/btn_selection_finalize" />

        <ImageButton
            android:id="@+id/btn_selection_finalize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/item_selector_finalize"
            android:background="@drawable/btn_background"
            style="@style/NumpadButton.Enter"
            android:contentDescription="@string/item_selector_btn_selection_finalize_descriptor"
            android:paddingHorizontal="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/btn_clear_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clear"
            android:background="@drawable/btn_background"
            style="@style/NumpadButton.Alternative"
            android:contentDescription="@string/item_selector_btn_clear_descriptor"
            android:layout_marginHorizontal="0dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/btn_selection_finalize" />

    </RelativeLayout>

</LinearLayout>